# src/recipes-secure.openapi.yaml
@@ -8,8 +8,10 @@ info:
     url: 'https://marmicode.io'
     email: kitchen@marmicode.io
 servers:
-  - url: 'http://localhost:3000'
-    description: Local
+  - description: Production
+    url: 'https://recipes-service-lrhkyo6iiq-ew.a.run.app'
+  - description: Local
+    url: 'http://localhost:3000'
 tags:
   - name: Ingredient
   - name: Recipe
@@ -42,9 +44,10 @@ paths:
                     id: babaganoush
                     created_at: '2022-03-01T00:00:00Z'
                     name: Babaganoush
+                    picture_uri: null
                     type: entree
           headers: {}
-        '4XX':
+        4XX:
           $ref: '#/components/responses/4XX'
       requestBody:
         content:
@@ -95,7 +98,7 @@ paths:
                               items:
                                 $ref: '#/components/schemas/Ingredient'
               examples: {}
-        '4XX':
+        4XX:
           $ref: '#/components/responses/4XX'
       parameters:
         - schema:
@@ -103,6 +106,11 @@ paths:
           in: query
           name: embed
           description: 'e.g. ingredients, steps'
+        - schema:
+            type: string
+          in: query
+          name: q
+          description: Keywords
       tags:
         - Recipe
   '/recipes/{recipe_id}':
@@ -127,7 +135,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Recipe'
-        '4XX':
+        4XX:
           $ref: '#/components/responses/4XX'
       requestBody:
         content:
@@ -157,7 +165,8 @@ paths:
                     id: burger
                     created_at: '2019-08-24T14:15:22Z'
                     name: Burger
-        '4XX':
+                    picture_uri: null
+        4XX:
           $ref: '#/components/responses/4XX'
   '/recipes/{recipe_id}/ingredients':
     parameters:
@@ -180,7 +189,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Ingredient'
-        '4XX':
+        4XX:
           $ref: '#/components/responses/4XX'
       description: ...
       requestBody:
@@ -208,7 +217,7 @@ paths:
       responses:
         '200':
           description: OK
-        '4XX':
+        4XX:
           $ref: '#/components/responses/4XX'
       tags:
         - Ingredient
@@ -224,13 +233,6 @@ components:
         example-1:
           name: Babaganoush
           type: entree
-          ingredients:
-            - salt
-        example-2:
-          name: Babaganoush
-          type: entree
-          ingredients:
-            - name: Salt
       allOf:
         - properties:
             name:
@@ -242,9 +244,15 @@ components:
                 - entree
                 - plat
                 - dessert
+            picture_uri:
+              type: string
+              format: uri
+              nullable: true
       type: object
     Recipe:
       title: Recipe
+      required:
+        - picture_uri
       x-examples:
         Babaganoush:
           id: babaganoush
@@ -280,6 +288,8 @@ components:
     IngredientNew:
       title: IngredientNew
       type: object
+      required:
+        - name
       properties:
         name:
           type: string
